<resources>
    <string name="app_name">Four Temperaments</string>
    <string name="buttonAnswer">"please answer the questions"</string>
    <string name="next">"Next"</string>
    <string name="warmup">"Warmup"</string>
    <string name="aaaa">"Age: "</string>
    <string name="result">Result</string>
    <string name="einstein">"Who said E=mc2"</string>
    <string name="hisName">Enter name</string>
    <string name="equation">"Solve the equation 2+2*2&#8211;2"</string>
    <string name="enterNumber">Enter number</string>
    <string name="question3">"Select European countries"</string>
    <string name="germany">Germany</string>
    <string name="poland">Poland</string>
    <string name="china">China</string>
    <string name="iceland">Iceland</string>
    <string name="hogwart">"Who was in Gryffindor house in Harry Potter book/movie"</string>
    <string name="Hermioa">Hermiona Granger</string>
    <string name="draco">Draco Malfoy</string>
    <string name="ron">Ron Weasley</string>
    <string name="luna">Luna Lovegood</string>
    <string name="Points">Three or four types of personality have the same number of points. You can not be determined.</string>
    <string name="name">"Name: "</string>
    <string name="sex">"Sex: "</string>
    <string name="age">"Age: "</string>
    <string name="age17">"Age: 17 or less"</string>
    <string name="age18">"Age: 18&#8211;24"</string>
    <string name="age25">"Age: 25&#8211;30"</string>
    <string name="age31">"Age: 31&#8211;35"</string>
    <string name="age36">"Age: 36&#8211;40"</string>
    <string name="age41">"Age: 41+"</string>
    <string name="experience">"Experience as a programmer: "</string>
    <string name="uCityStudent">"Udacity Student: "</string>
    <string name="mails">"Now if you want you can send email to you or your friends by clicking "EMAIL" button or sent it to me by clicking "SEND TO ME" button, also if you checked Udacity membership you are able to see another button called "UDACITY" and if you click it, you ill be redirected to my topic on forum where you can share (after click the result is automatically copied to clipboard so just paste it) your personality with our community ;)"</string>
    <string name="beforeStart">"Before you start"</string>
    <string name="information">The temperament test is made up of 40 groups of terms, consisting of four choices each.
        Read the four choices in each group, and then click the choice that best describes you. When you have chosen a term for each of the 40 groups, click the "Check" button, which is directly under the last group of choices."</string>
    <string name="udacityPart">"Are You a part of Udacity program(Android Basics Scholarship: User Interface)? If Your are not, just leave it. "</string>
    <string name="enterYourName">"Please enter your name"</string>
    <string name="whoAreU">"Who are You?</string>
    <string name="expBefore">"Did You have any experience as a programmer earlier?"</string>
    <string name="howOld">"How old are You?"</string>
    <string name="enterName">"Enter your name"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="startTest">Start Test</string>
    <string name="check">check</string>
    <string name="start">start</string>
    <string name="temp">temperaments</string>
    <string name="about">about</string>
    <string name="exit">exit</string>
    <string name="fourT">Four temperaments</string>
    <string name="fourTxt">Four temperaments is a proto-psychological theory that suggests that there are four fundamental personality types, sanguine (enthusiastic, active and social), choleric (short-tempered, fast or irritable), melancholic (analytical, wise and quiet), and phlegmatic (relaxed and peaceful).
        Most formulations include the possibility of mixtures of the types.The Greek physician Hippocrates (c. 460 – c. 370 BC) incorporated the four temperaments into his medical theories as part of the ancient medical concept of humorism, that four bodily fluids affect human personality traits and behaviors. Later discoveries in biochemistry have led modern medicine science to reject the theory of the four temperaments, although some personality type systems of varying scientific acceptance continue to use four or more categories of a similar nature.</string>
    <string name="fourInfo">Click here for more info: <a>https://en.wikipedia.org/wiki/Four_temperaments</a></string>
    <string name="moreInfoS">Click here for more info: <a>https://www.fisheaters.com/quizs.html</a></string>
    <string name="moreInfoC">Click here for more info: <a>https://www.fisheaters.com/quizc.html</a></string>
    <string name="moreInfoP">Click here for more info: <a>https://www.fisheaters.com/quizp.html</a></string>
    <string name="moreInfoM">Click here for more info: <a>https://www.fisheaters.com/quizm.html</a></string>
    <string name="sanguine">Sanguine</string>
    <string name="sanguineTxt">"You are a Sanguine, with an abundance of blood.
        Sanguines are characterized by the element of Air,the season of Spring, childhood, the color sunny yellow, Venus, and the characteristics of "Hot" and "Moist.
        Animals used to symbolize the Sanguine include the ape and the goat. To ehnance your Sanguine tendencies, listen to music in the Lydian Mode; to diminish those tendencies, listen to music in the Hypolydian mode.
        If you were living in the Age of Faith, perfect career choices for you would be artisan, shopkeeper, innkeep, craftsman, seamstress, tailor, brewer, baker, stone mason, weaver, potter, farmer, housewife with a very happy family."&#8230;</string>
    <string name="sanguineInfo"><a herf="Click for more info">https://www.fisheaters.com/quizs/</a></string>
    <string name="choleric">Choleric</string>
    <string name="cholericTxt">"You are a "bilious" Choleric, with an abundance of yellow bile (believed to have originated in the kidneys).
        Cholerics are characterized by the element of Fire, the season of Summer, early adulthood, the color fiery red, Mars, and the characteristics of "Hot" and "Dry."
        The animal used to symbolize the Choleric is the lion. To ehnance your Choleric tendencies, listen to music in the Phrygian Mode; to diminish those tendencies, listen to music in the Hypophrygian mode.
        Famous Cholerics include St. John the Baptist, St. Paul, and St. Ignatius of Loyola.
        If you were living in the Age of Faith, perfect career choices for you would be Crusader (leader of the Crusades, of course), the knighthood, King, mayor, head of a guild, founder of a new religious order, or housewife or father with a well-organized,
        well-behaved brood, each of whom you expect to excel."&#8230;</string>
    <string name="cholericInfo"><a herf="Click for more info">https://www.fisheaters.com/quizc/</a></string>
    <string name="melancholic">Melancholic</string>
    <string name="melancholicTxt">"You are a "nervous" Melancholic, with an abundance of black bile.
        Melancholics are characterized by the element of Earth, the season of Autumn, middle-aged adulthood, the colors black and blue, Saturn, and the characteristics of "Cold" and "Dry."
        Animals used to symbolize the Melancholic include the pig, cat, and owl.
        To ehnance your Melancholic tendencies, listen to music in the Mixolydian Mode; to diminish those tendencies, listen to music in the Hypomixolydian mode.
        Famous Melancholics include St. John of the Cross, St. John the Divine, St. Francis, and St. Catherine of Siena.
        If you were living in the Age of Faith, perfect career choices for you would be contemplative religious, theologian, artist, or writer."&#8230;</string>
    <string name="melancholicInfo"><a herf="Click for more info">https://www.fisheaters.com/quizl/</a></string>
    <string name="phlegmatic">Phlegmatic</string>
    <string name="phlegmaticTxt">"You are a "lymphatic" or "pituitous" Phlegmatic, with an abundance of phlegm.
        Phlegmatics are characterized by the element of Water, the season of Winter, old-aged adulthood, the colors white and green, the Moon, and the characteristics of "Cold" and "Wet."
        Animals used to symbolize the Phlegmatic include the lamb and turtle.
        To ehnance your Phlegmatic tendencies, listen to music in the Hypodorian Mode; to diminish those tendencies, listen to music in the Dorian mode.
        If you were living in the Age of Faith, the career choice for you would be a copier of manuscripts or a night watchman."&#8230;</string>
    <string name="phlegmaticInfo"><a herf="Click for more info">https://www.fisheaters.com/quizp/</a></string>
    <string name="answer1T">Animated</string>
    <string name="answer1">	Full of life, lively use of hand, arm, and face gestures.</string>
    <string name="answer2T">Adventurous</string>
    <string name="answer2">	One who will take on new and daring enterprises with a need to master them.</string>
    <string name="answer3T">Analytical</string>
    <string name="answer3">	One who is constantly in the process of analyzing people, places or things.</string>
    <string name="answer4T">Adaptable</string>
    <string name="answer4">	One who easily adapts to any situation.</string>
    <string name="answer1Ta">Playful</string>
    <string name="answer1a">Full of fun and good humor.</string>
    <string name="answer2Ta">Persuasive</string>
    <string name="answer2a">One who persuades through logic and fact rather than charm.</string>
    <string name="answer3Ta">Persistent</string>
    <string name="answer3a">"Refusing to let go, insistently repetitive or continuous, can't drop it."</string>
    <string name="answer4Ta">Peaceful</string>
    <string name="answer4a">One who seems undisturbed and tranquil and who retreats from any form of strife.</string>
    <string name="answer1Tb">Sociable</string>
    <string name="answer1b">This sociable refers to one who sees being with others as an opportunity to be cute and entertaining.</string>
    <string name="answer2Tb">Strong-willed</string>
    <string name="answer2b">One who is determined to have his/her own way.</string>
    <string name="answer3Tb">Self-sacrificing</string>
    <string name="answer3b">One who constantly sacrifices his/her own personal well being or for the sake or to meet the needs of others.</string>
    <string name="answer4Tb">Submissive</string>
    <string name="answer4b">One who easily submits to any other’s point of view or desire. This person has little need to assert his own view or opinion.</string>
    <string name="answer1Tc">Convincing</string>
    <string name="answer1c">This person can convince you of anything through the sheer charm of his/her personality. Facts are unimportant.</string>
    <string name="answer2Tc">Competitive</string>
    <string name="answer2c">One who turns every situation, happening or game into to an arena for competition. This person always plays to win.</string>
    <string name="answer3Tc">Considerate</string>
    <string name="answer3c">Having regard for the needs and feelings of others.</string>
    <string name="answer4Tc">Controlled</string>
    <string name="answer4c">"One who has emotional feelings but doesn't display them."</string>
    <string name="answer1Td">Refreshing</string>
    <string name="answer1d">One who renews and stimulates or pleasantly lifts spirits.</string>
    <string name="answer2Td">Resourceful</string>
    <string name="answer2d">One who is able to act quickly and effectively in virtually all situations.</string>
    <string name="answer3Td">Respectful</string>
    <string name="answer3d">One who treats others with deference, honor, esteem.</string>
    <string name="answer4Td">Reserved</string>
    <string name="answer4d">Self-restraint in expression of emotion or enthusiasm.</string>
</resources>