<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.android.fourtemperaments.About">

    <android.support.v7.widget.CardView style="@style/cards">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout style="@style/layoutResult">

                <TextView
                    style="@style/resultTitle"
                    android:gravity="center"
                    android:text="@string/fourT" />

                <TextView
                    style="@style/resultTxt"
                    android:text="@string/fourTxt" />

                <TextView
                    style="@style/resultTxt"
                    android:autoLink="web"
                    android:text="@string/fourInfo" />
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

    <Button
        style="@style/menuButton"
        android:onClick="back"
        android:text="Back to Menu" />
</LinearLayout>